# ComputerGraphicsExercises

./: CMakeLists.txt  README.md  launch.vs.json
src/: CMakeLists.txt  Camera.h  Cylinder.cpp  Cylinder.h  Image.cpp  Image.h  Job.h  Light.h  Material.h  Mesh.cpp  Mesh.h  Object.h  Paths.h.in  Plane.cpp  Plane.h  Ray.h  Scene.cpp  Scene.h  SolveQuadratic.h  Sphere.h  StopWatch.h  debug_aabb.cpp  raytrace.cpp  vec3.h
